# learn_cmake

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  builder(buildfile).sh  runner.sh  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp
